--- a/todo
+++ b/todo
@@ -7,3 +7,24 @@ invite game
 accept game
 start game
 //
+
+
+
+_____________________________________________________
+1/Chat
+2/file de message chacun son tour
+3/telephone arabae
+4/mise a jour des cartes qd on joue + efface quand pli
+
+5/mettre en bootstrap
+6/systeme de connexion 
+6/afficher liste des joueurs connectes
+
+
+
+
+
+
+
+
+7/systeme d invitation
