commit avant modif structure users en memoire server -> bloque pour le jeu

--- a/todo
+++ b/todo
@@ -24,12 +24,8 @@ _____________________________________________________
 5/mettre en bootstrap
 6/systeme de connexion 
 6/afficher liste des joueurs connectes
+7/systeme d invitation -> all
 
 
 
-
-
-
-
-
-7/systeme d invitation
+systeme d'invit avec selection
