--- a/todo
+++ b/todo
@@ -1,7 +1,16 @@
 pb du register
-pb de laffihcage des gens connectes
 
+jeu de carte en non absolu
+position joeuur
+noms joueurs
 
+revoir ihm plus propre surtout sur 4 ecran
+ajouter annonce
+ajouter comptage de points
+ajouter affichage des points
+
+le scroll message
+selection des gens connecter pour invitation
 
 logger les cartes dans OBJET GAME
 finir le set de 8 cartes
