count scores implemented but not tested (require chose different trumps

--- a/todo
+++ b/todo
@@ -13,12 +13,14 @@ pb du register
 
 
 FONTIONALITIES
-clik to announce
-le scroll message
-check box invite 3 personnes
 notion d'equipe
 ajouter comptage de points
 ajouter affichage des points
+clik to announce
+
+ajouter points belote
+
+le scroll message
 client : trier alphabetique nom users
 _____________________________________________________
 _____________________________________________________
