--- a/todo
+++ b/todo
@@ -14,9 +14,11 @@ jeu de carte en non absolu
 pb du register
 double connection 'a ' at the same time;
 Q -> 10 -> 2 -> 9 turmps, remain J for winner NO PLAYABLE CARDS;
+deselecte button lors de l'annonce
+
 
 FONTIONALITIES
-notion d'equipe
+choisir les équipes au départ
 ajouter comptage de points
 ajouter affichage des points
 clik to announce
