display scores functional

--- a/todo
+++ b/todo
@@ -15,7 +15,8 @@ pb du register
 double connection 'a ' at the same time;
 Q -> 10 -> 2 -> 9 turmps, remain J for winner NO PLAYABLE CARDS;
 deselecte button lors de l'annonce
-
+qui gagne les plis en AT : KO
+prise en compte du capot
 
 FONTIONALITIES
 choisir les équipes au départ
