--- a/todo
+++ b/todo
@@ -17,6 +17,7 @@ Q -> 10 -> 2 -> 9 turmps, remain J for winner NO PLAYABLE CARDS;
 deselecte button lors de l'annonce
 qui gagne les plis en AT : KO
 prise en compte du capot
+qunad partenaire maitre on est obligé de coupé..
 
 FONTIONALITIES
 choisir les équipes au départ
