--- a/todo
+++ b/todo
@@ -9,23 +9,21 @@ chloe lettre motiv
 _____________________________________________________
 _____________________________________________________
 BUGGS
-announce before card are distributed
 jeu de carte en non absolu
 pb du register
 double connection 'a ' at the same time;
 Q -> 10 -> 2 -> 9 turmps, remain J for winner NO PLAYABLE CARDS;
-deselecte button lors de l'annonce
 qui gagne les plis en AT : KO
-prise en compte du capot
-qunad partenaire maitre on est obligé de coupé..
 
 FONTIONALITIES
 choisir les équipes au départ
 ajouter comptage de points
 ajouter affichage des points
 clik to announce
-
+bloquer nouvel invite game lors d'une game
 ajouter points belote
+reconnection a une game
+
 
 le scroll message
 client : trier alphabetique nom users
