--- a/todo
+++ b/todo
@@ -1,4 +1,3 @@
---> affichage choix annonces
 
 peggie
 cedric guilherm
@@ -12,7 +11,6 @@ BUGGS
 jeu de carte en non absolu
 pb du register
 double connection 'a ' at the same time;
-Q -> 10 -> 2 -> 9 turmps, remain J for winner NO PLAYABLE CARDS;
 qui gagne les plis en AT : KO
 
 FONTIONALITIES
@@ -23,7 +21,7 @@ clik to announce
 bloquer nouvel invite game lors d'une game
 ajouter points belote
 reconnection a une game
-
+display annonce popre '80H' -> '80 &hearts'
 
 le scroll message
 client : trier alphabetique nom users
