display cards one on each other

--- a/todo
+++ b/todo
@@ -15,9 +15,7 @@ double connection 'a ' at the same time;
 /////////////////
 la coinche: enable a la volee, emepcher si pas d annonce avant
 
-afficher les cartes moitié l'une sur l'autre
-
-affichage de l atout #currentAnnounce
+responsive taille carte
 
 affichage uniquement de ce quon peut annonce
 
